deploy/vote/base/deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: vote
    tier: front
  name: vote
  namespace: instavote
spec:
  replicas: 1
  selector:
    matchLabels:
      app: vote
      tier: front
  strategy: {}
  template:
    metadata:
      labels:
        app: vote
        tier: front
    spec:
      containers:
      - image: schoolofdevops/vote:v4
        name: vote
        resources: {}
