deploy/vote/base/service.yml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: vote
    tier: front 
  name: vote
  namespace: instavote
spec:
  ports:
  - name: "80"
    nodePort: 30000
    port: 80
    protocol: TCP
    targetPort: 80
  selector:
    app: vote
    tier: front 
  type: NodePort
